Feat: Add base structure for login form in index.html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
               type="password"
               id="password"
               name="password"
+              minlength="8"
               required>
             <p>Password must be at least 8 characters long</p>
           </div>
@@ -67,6 +68,6 @@
         Placeholder for dark and light mode
       </div>
     </footer>
-    
+
 </body>
 </html>
