--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
   
   <title>Login - Wanderly</title>
 </head>
-<body class="font-body bg-lightBackground text-lightText dark:bg-darkElements dark:text-darkText">
+<body class="font-body bg-lightBackground text-lightText dark:bg-darkElements dark:text-darkText min-h-screen flex flex-col">
 
-    <header class="bg-lightHeaderFooter">
+    <header class="bg-lightHeaderFooter flex justify-between items-center p-4">
       <div>
         <h1 class="font-display text-2xl">Wanderly</h1>
       </div>
       <div>
-        <nav class="font-heading text-xl">
+        <nav class="font-heading italic text-xl">
           <a href="#">Login</a>
         </nav>
       </div>
@@ -70,9 +70,9 @@
       </div>
     </main>
 
-    <footer class="bg-lightHeaderFooter">
+    <footer class="bg-lightHeaderFooter mt-auto">
       <div class="font-heading">
-        <nav>
+        <nav class="flex flex-col  items-center py-4 space-y-4">
           <a href="#">About Wanderly</a>
           <a href="#">Terms and Conditions</a>
           <a href="#">Privacy Policy</a>
