--- a/feed/index.html
+++ b/feed/index.html
@@ -38,15 +38,35 @@
       </button>
     </div>
 
-    <div class="flex justify-between items-center mt-10 dark:text-darkText">
-      <div>
-        <h2 class="font-heading text-xl">All Posts</h2>
+    <div class="flex justify-between items-center mt-10 dark:text-darkText border-b border-darkElements">
+      <div class="mb-2">
+        <h2 class="font-heading text-2xl">All Posts</h2>
       </div>
-      <div class="flex text-lg">
+      <div class="flex text-lg mb-2">
         
-        <p>Search...</p>
-        <!--Dropdown sorting-->
-        <p>Sort By:</p>
+        <form action="#" method="get">
+          <label for="search" class="hidden">Search:</label>
+          <input 
+            type="search" 
+            name="search" 
+            id="search"
+            placeholder="Search..."
+            class="w-24 p-1 border border-darkElements rounded-md shadow-md">
+        </form>
+        <form>
+          <select 
+            name="sort" 
+            id="sort"
+            class="w-24 p-1.5 ml-2 border border-darkElements rounded-md shadow-md">
+            <option value="#" selected disabled>Sort By</option>
+            <option value="Africa">Africa</option>
+            <option value="Asia">Asia</option>
+            <option value="Australia">Australia</option>
+            <option value="Europe">Europe</option>
+            <option value="North America"></option>
+            <option value="South America"></option>
+          </select>
+        </form>
       </div>
     </div>
     <!--Add Underline under this element-->
