--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
   <script src="js/script.js" defer></script>
   <title>Login - Wanderly</title>
 </head>
+
 <body class="font-body bg-lightBackground text-lightText dark:bg-darkElements min-h-screen flex flex-col">
 
-    
-    <header class="bg-lightHeaderFooter dark:bg-darkElements dark:text-darkText flex justify-between items-center p-4">
+    <header class="bg-lightHeaderFooter dark:bg-darkElements dark:text-darkText dark:border-b dark:border-darkText flex justify-between items-center p-4">
       <div>
-        <h1 class="font-display text-2xl">Wanderly</h1>
+        <h1 class="font-display text-2xl lg:text-4xl">Wanderly</h1>
       </div>
       <div>
-        <nav class="font-heading italic text-xl">
+        <nav class="font-heading italic text-xl lg:text-2xl">
           <a href="#">Login</a>
         </nav>
       </div>
     </header>
 
     <main>
-      <div class="font-heading text-lg text-center mt-10 dark:text-darkText">
+      <div class="font-heading text-lg lg:text-xl text-center mt-10 dark:text-darkText">
         <p>Welcome to Wanderly!</p>
         <p>Please login to your account to start sharing your adventures with other explorers</p>
       </div>
-      <div class="p-6 m-8 bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg">
+      <div class="p-6 m-8 md:p-10 md:ml-28 md:mr-28 lg:ml-52 lg:mr-52 bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg">
         <form>
           <div class="mb-4">
             <label for="email">E-mail</label>
@@ -71,7 +71,7 @@
       </div>
     </main>
 
-    <footer class="bg-lightHeaderFooter dark:bg-darkElements mt-auto">
+    <footer class="bg-lightHeaderFooter dark:bg-darkElements mt-auto dark:border-t dark:border-darkText">
       <div class="flex justify-center items-center pt-4">
         <button id="toggle-theme" class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl">
           Change Mode
