Style: Adding styling to profile/index.html page

--- a/feed/index.html
+++ b/feed/index.html
@@ -32,7 +32,7 @@
   <main class="pl-4 pr-4 lg:pl-20 lg:pr-20">
     <div class="flex justify-between items-center mt-10 border-b border-darkElements dark:border-darkText">
       <div class="mb-2">
-        <h2 class="font-heading text-2xl">
+        <h2 class="text-2xl">
           <div>
             <button type="submit"
               class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl">
@@ -169,7 +169,7 @@
         <h3 class="font-heading text-xl">My Travel Diary</h3>
         <img 
           class="pt-4"
-          src="/assets/italy-3.jpg" 
+          src="/assets/italy-2.jpg" 
           alt="A gondola glides gracefully through the serene canals of Venice, surrounded by historic buildings and vibrant reflections.">
         <p><span class="font-bold">Posted on:</span> 5h of July</p>
         <p><span class="font-bold">Tag:</span> Europe</p>
