Style: Adding utilityclasses and fixing small things

--- a/profile/index.html
+++ b/profile/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description" content="Edit your profile, create new posts, and manage your content on Wanderly. Share your adventures and explore new places with the Wanderly community.">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
@@ -30,35 +30,35 @@
         ☰
       </button>
       <nav class="hidden lg:flex flex-row space-x-6 font-heading text-xl lg:text-2xl">
-        <a href="/feed/index.html" class="italic">Explore</a>
-        <a href="/profile/index.html">My Profile</a>
-        <a href="/index.html">Logout</a>
+        <a href="/feed/index.html" class="hover:italic">Explore</a>
+        <a href="/profile/index.html" class="italic">My Profile</a>
+        <a href="/index.html" class="hover:italic">Logout</a>
       </nav>
     </div>
   </header>
   
   <nav id="mobile-menu" class="hidden bg-lightHeaderFooter dark:bg-darkElements w-full p-4">
     <ul class="flex flex-col items-center space-y-4 font-heading text-xl dark:text-darkText">
-      <li><a href="/feed/index.html" class="italic p-2 text-center block">Explore</a></li>
-      <li><a href="/profile/index.html" class="p-2 text-center block">My Profile</a></li>
+      <li><a href="/feed/index.html" class="p-2 text-center block">Explore</a></li>
+      <li><a href="/profile/index.html" class="italic p-2 text-center block">My Profile</a></li>
       <li><a href="/index.html" class="p-2 text-center block">Logout</a></li>
     </ul>
   </nav>
 
   <main class="pl-4 pr-4 lg:pl-20 lg:pr-20">  
     <div class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg mt-10 mb-10 p-4 flex flex-col justify-center items-center gap-8">
-      <h2 class="font-heading text-xl lg:text-2xl">Seems like your new here!</h2>
+      <h2 class="font-heading text-xl lg:text-2xl text-center">Seems like your new here!</h2>
       <p class="text-center">Why don´t you start off by creating your profile or first post?</p>
       <div class="flex flex-col md:flex-row gap-8 justify-center items-center mb-8">
         <div>
-          <button
-            class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl">Edit
-            Profile</button>
+          <a href="#" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">
+            Edit Profile
+          </a>
         </div>
         <div>
-          <button
-            class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl">New
-            Post</button>
+          <a href="#" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">
+            New Post
+          </a>
         </div>
       </div>  
     </div>
@@ -66,16 +66,16 @@
   <footer class="bg-lightHeaderFooter dark:bg-darkElements mt-auto dark:border-t dark:border-darkText">
       <div class="flex justify-center items-center pt-4">
         <button id="toggle-theme"
-          class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl">
+          class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-lightHeaderFooter">
           Change Mode
         </button>
       </div>
     
       <div class="font-heading text-lg">
         <nav class="flex flex-col  items-center py-4 space-y-4 dark:text-darkText">
-          <a href="#">About Wanderly</a>
-          <a href="#">Terms and Conditions</a>
-          <a href="#">Privacy Policy</a>
+          <a href="#" class="hover:italic">About Wanderly</a>
+          <a href="#" class="hover:italic">Terms and Conditions</a>
+          <a href="#" class="hover:italic">Privacy Policy</a>
         </nav>
       </div>
   </footer>
