--- a/profile/user1/index.html
+++ b/profile/user1/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
+  <meta name="description" content="Discover the adventures in 'My Travel Diary' on Wanderly. Explore personal travel stories, memorable moments, and tips for fellow explorers.">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
@@ -32,54 +32,54 @@
         ☰
       </button>
       <nav class="hidden lg:flex flex-row space-x-6 font-heading text-xl lg:text-2xl">
-        <a href="/feed/index.html" class="italic">Explore</a>
-        <a href="/profile/index.html">My Profile</a>
-        <a href="/index.html">Logout</a>
+        <a href="/feed/index.html" class="hover:italic">Explore</a>
+        <a href="/profile/index.html" class="hover:italic">My Profile</a>
+        <a href="/index.html" class="hover:italic">Logout</a>
       </nav>
     </div>
   </header>
   
   <nav id="mobile-menu" class="hidden bg-lightHeaderFooter dark:bg-darkElements w-full p-4">
     <ul class="flex flex-col items-center space-y-4 font-heading text-xl dark:text-darkText">
-      <li><a href="/feed/index.html" class="italic p-2 text-center block">Explore</a></li>
+      <li><a href="/feed/index.html" class="p-2 text-center block">Explore</a></li>
       <li><a href="/profile/index.html" class="p-2 text-center block">My Profile</a></li>
       <li><a href="/index.html" class="p-2 text-center block">Logout</a></li>
     </ul>
   </nav>
 
   <main class="pl-4 pr-4 lg:pl-20 lg:pr-20">
-    <div
-      class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg mt-10 mb-10 p-4 flex flex-col md:flex-row justify-center gap-8">
-      <div>
-        <img class="md:h-96 md:w-auto" src="/assets/avatar.jpg"
-          alt="Colorful houses perched on a cliffside overlooking a sparkling ocean, creating a vibrant coastal scene.">
-      </div>
-
-      <div>
-        <div class="border-b border-darkElements dark:border-darkText">
-          <h2 class="text-xl lg:text-2xl font-heading mb-2 dark:text-darkText">My Travel Diary</h2>
-        </div>
-        <p class="mt-2">Currently taking a break from everyday life to experience the world.</p>
-        <div class="flex mt-8 gap-10">
-          <div class="text-center">
-            <p class="text-lg">Followed by:</p>
-            <p class="font-display text-xl">217</p>
-          </div>
-          <div class="text-center">
-            <p class="text-lg">Following:</p>
-            <p class="font-display text-xl">153</p>
-          </div>
+    <section>
+      <div class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg mt-10 mb-10 p-4 flex flex-col md:flex-row justify-center gap-8">
+        <div>
+          <img class="md:h-96 md:w-auto" src="/assets/avatar.jpg"
+            alt="Colorful houses perched on a cliffside overlooking a sparkling ocean, creating a vibrant coastal scene.">
         </div>
         <div>
-          <button
-            class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 mt-20 text-xl">Follow
-            User</button>
+          <div class="border-b border-darkElements">
+            <h2 class="text-xl lg:text-2xl font-heading mb-2">My Travel Diary</h2>
+          </div>
+          <p class="mt-2 text-lg">Currently taking a break from everyday life to experience the world.</p>
+          <div class="flex mt-8 gap-10">
+            <div class="text-center">
+              <p class="text-lg">Followed by:</p>
+              <p class="font-display text-xl">217</p>
+            </div>
+            <div class="text-center">
+              <p class="text-lg">Following:</p>
+              <p class="font-display text-xl">153</p>
+            </div>
+          </div>
+          <div>
+            <button class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 mt-20 text-x hover:border-2">Follow User</button>
+          </div>
         </div>
       </div>
-    </div>
-    <div>
+    </section>
+
+    <section>
+      <div>
       <div class="border-b border-darkElements dark:border-darkText">
-        <h2 class="text-xl lg:text-2xl font-heading mb-2 dark:text-darkText">Posts by The Travel Diary</h2>
+        <h2 class="text-xl lg:text-2xl font-heading mb-2 dark:text-darkText">Posts by My Travel Diary</h2>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         <div class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg p-4 mt-8">
@@ -108,24 +108,26 @@
           <p><span class="font-bold">Tag:</span> Europe</p>
           <p>Just started of our Italy trip in the incredible Venice. So excited for this adventure.</p>
         </div>
-
-
       </div>
+
+      <div class="text-center mt-10">
+        <a href="/feed/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-darkText">Back To All Posts</a>
+      </div>
+    </section>
   </main>
 
   <footer class="bg-lightHeaderFooter dark:bg-darkElements mt-10 lg:mt-20 dark:border-t dark:border-darkText">
     <div class="flex justify-center items-center pt-4">
-      <button id="toggle-theme"
-        class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl">
+      <button id="toggle-theme" class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-lightHeaderFooter">
         Change Mode
       </button>
     </div>
 
     <div class="font-heading text-lg">
       <nav class="flex flex-col  items-center py-4 space-y-4 dark:text-darkText">
-        <a href="#">About Wanderly</a>
-        <a href="#">Terms and Conditions</a>
-        <a href="#">Privacy Policy</a>
+        <a href="#" class="hover:italic">About Wanderly</a>
+        <a href="#" class="hover:italic">Terms and Conditions</a>
+        <a href="#" class="hover:italic">Privacy Policy</a>
       </nav>
     </div>
   </footer>
