Feat: Implementing user pages

--- a/profile/index.html
+++ b/profile/index.html
@@ -12,13 +12,12 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Molle:ital@0;1&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-    rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <script src="/js/script.js" defer></script>
   <title>My Profile - Wanderly</title>
 </head>
+
 <body class="font-body bg-lightBackground text-lightText dark:bg-darkElements min-h-screen flex flex-col">
   <header
     class="bg-lightHeaderFooter dark:bg-darkElements dark:text-darkText dark:border-b dark:border-darkText flex justify-between items-center p-4 lg:p-8">
@@ -26,9 +25,7 @@
       <h1 class="font-display text-2xl lg:text-4xl">Wanderly</h1>
     </div>
     <div class="relative flex items-center">
-      <button id="toggle-menu" class="lg:hidden text-2xl">
-        ☰
-      </button>
+      <button id="toggle-menu" class="lg:hidden text-2xl">☰</button>
       <nav class="hidden lg:flex flex-row space-x-6 font-heading text-xl lg:text-2xl">
         <a href="/feed/index.html" class="hover:italic">Explore</a>
         <a href="/profile/index.html" class="italic">My Profile</a>
@@ -47,37 +44,31 @@
 
   <main class="pl-4 pr-4 lg:pl-20 lg:pr-20">  
     <div class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg mt-10 mb-10 p-4 flex flex-col justify-center items-center gap-8">
-      <h2 class="font-heading text-xl lg:text-2xl text-center">Seems like your new here!</h2>
+      <h2 class="font-heading text-xl lg:text-2xl text-center">Seems like you´re new here!</h2>
       <p class="text-center">Why don´t you start off by creating your profile or first post?</p>
       <div class="flex flex-col md:flex-row gap-8 justify-center items-center mb-8">
         <div>
-          <a href="#" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">
-            Edit Profile
-          </a>
+          <a href="#" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">Edit Profile</a>
         </div>
         <div>
-          <a href="#" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">
-            New Post
-          </a>
+          <a href="#" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">New Post</a>
         </div>
       </div>  
     </div>
   </main>
+
   <footer class="bg-lightHeaderFooter dark:bg-darkElements mt-auto dark:border-t dark:border-darkText">
-      <div class="flex justify-center items-center pt-4">
-        <button id="toggle-theme"
-          class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-lightHeaderFooter">
-          Change Mode
-        </button>
-      </div>
+    <div class="flex justify-center items-center pt-4">
+      <button id="toggle-theme" class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-lightHeaderFooter">Change Mode</button>
+    </div>
     
-      <div class="font-heading text-lg">
-        <nav class="flex flex-col  items-center py-4 space-y-4 dark:text-darkText">
-          <a href="#" class="hover:italic">About Wanderly</a>
-          <a href="#" class="hover:italic">Terms and Conditions</a>
-          <a href="#" class="hover:italic">Privacy Policy</a>
-        </nav>
-      </div>
+    <div class="font-heading text-lg">
+      <nav class="flex flex-col  items-center py-4 space-y-4 dark:text-darkText">
+        <a href="#" class="hover:italic">About Wanderly</a>
+        <a href="#" class="hover:italic">Terms and Conditions</a>
+        <a href="#" class="hover:italic">Privacy Policy</a>
+      </nav>
+    </div>
   </footer>
 </body>
 </html>
