Feat: Implementing page for a new post form

--- a/feed/index.html
+++ b/feed/index.html
@@ -42,11 +42,11 @@
   </nav>
 
   <main class="pl-4 pr-4 lg:pl-20 lg:pr-20">
-    <div class="flex justify-between items-center mt-10 border-b border-darkElements dark:border-darkText">
+    <div class="flex flex-wrap justify-between items-center mt-10 border-b border-darkElements dark:border-darkText">
       <div class="mb-2">
         <h2 class="text-2xl">
           <div>
-            <button type="submit" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-darkText">New Post</button>
+            <a href="/post/new/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-darkText">New Post</a>
           </div>
         </h2>
       </div>
