--- a/profile/index.html
+++ b/profile/index.html
@@ -51,7 +51,7 @@
           <a href="#" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">Edit Profile</a>
         </div>
         <div>
-          <a href="#" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">New Post</a>
+          <a href="/post/new/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">New Post</a>
         </div>
       </div>  
     </div>
