Feat: Adding a form for updating user profile

--- a/profile/index.html
+++ b/profile/index.html
@@ -48,7 +48,7 @@
       <p class="text-center">Why don´t you start off by creating your profile or first post?</p>
       <div class="flex flex-col md:flex-row gap-8 justify-center items-center mb-8">
         <div>
-          <a href="#" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">Edit Profile</a>
+          <a href="/profile/edit/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">Edit Profile</a>
         </div>
         <div>
           <a href="/post/new/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">New Post</a>
