style: changing hover effect on buttons

--- a/profile/user4/index.html
+++ b/profile/user4/index.html
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div>
-            <button class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 mt-20 text-xl hover:border-2">Follow User</button>
+            <button class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md mt-10 px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">Follow User</button>
           </div>
         </div>
       </div>
@@ -102,14 +102,14 @@
       </div>
 
       <div class="text-center mt-10">
-        <a href="/feed/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-darkText">Back To All Posts</a>
+        <a href="/feed/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">Back To All Posts</a>
       </div>
     </section>
   </main>
 
   <footer class="bg-lightHeaderFooter dark:bg-darkElements mt-10 lg:mt-20 dark:border-t dark:border-darkText">
     <div class="flex justify-center items-center pt-4">
-      <button id="toggle-theme" class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-lightHeaderFooter">Change Mode</button>
+      <button id="toggle-theme" class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">Change Mode</button>
     </div>
 
     <div class="font-heading text-lg">
