--- a/feed/index.html
+++ b/feed/index.html
@@ -46,7 +46,7 @@
       <div class="mb-2">
         <h2 class="text-2xl">
           <div>
-            <a href="/post/new/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-darkText">New Post</a>
+            <a href="/post/new/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lgt">New Post</a>
           </div>
         </h2>
       </div>
@@ -240,7 +240,7 @@
 
   <footer class="bg-lightHeaderFooter dark:bg-darkElements mt-10 lg:mt-20 dark:border-t dark:border-darkText">
     <div class="flex justify-center items-center pt-4">
-      <button id="toggle-theme" class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-lightHeaderFooter">Change Mode</button>
+      <button id="toggle-theme" class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">Change Mode</button>
     </div>
   
     <div class="font-heading text-lg">
