--- a/profile/edit/index.html
+++ b/profile/edit/index.html
@@ -77,7 +77,7 @@
 				</div>
 
 				<div class="flex justify-center mt-8">
-					<button id="login-link" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">Update Profile</button>
+					<button id="login-link" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">Update Profile</button>
 				</div>
 			</form>
 		</div>
@@ -85,7 +85,7 @@
 
 	<footer class="bg-lightHeaderFooter dark:bg-darkElements mt-auto dark:border-t dark:border-darkText">
 		<div class="flex justify-center items-center pt-4">
-			<button id="toggle-theme" class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-lightHeaderFooter">Change Mode</button>
+			<button id="toggle-theme" class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">Change Mode</button>
 		</div>
 	
 		<div class="font-heading text-lg">
