--- a/profile/index.html
+++ b/profile/index.html
@@ -48,10 +48,10 @@
       <p class="text-center">Why don´t you start off by creating your profile or first post?</p>
       <div class="flex flex-col md:flex-row gap-8 justify-center items-center mb-8">
         <div>
-          <a href="/profile/edit/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">Edit Profile</a>
+          <a href="/profile/edit/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">Edit Profile</a>
         </div>
         <div>
-          <a href="/post/new/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2">New Post</a>
+          <a href="/post/new/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">New Post</a>
         </div>
       </div>  
     </div>
@@ -59,7 +59,7 @@
 
   <footer class="bg-lightHeaderFooter dark:bg-darkElements mt-auto dark:border-t dark:border-darkText">
     <div class="flex justify-center items-center pt-4">
-      <button id="toggle-theme" class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-lightHeaderFooter">Change Mode</button>
+      <button id="toggle-theme" class="font-display bg-lightBackground border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">Change Mode</button>
     </div>
     
     <div class="font-heading text-lg">
