style: adjusting size of  wrapper for forms and profile page

--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
       <p>Welcome to Wanderly!</p>
       <p>Please login to your account to start sharing your adventures with other explorers</p>
     </div>
-    <div class="p-6 m-8 md:p-10 md:ml-28 md:mr-28 lg:ml-52 lg:mr-52 bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg">
-      <form id="login-form" action="/profile/index.html">
+    <div class="max-w-[36rem] mx-4 sm:mx-6 md:mx-auto my-8 md:my-10 lg:my-12 px-4 sm:px-6 md:px-10 py-6 md:py-10 bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg">
+      <div class="border-b border-darkElements">
+        <h2 class="text-xl lg:text-2xl font-heading mb-2">Log in</h2>
+      </div>
+      <form id="login-form" action="/profile/index.html" class="mt-8 mb-8">
         <div class="mb-4">
           <label for="email">E-mail</label>
           <input 
