--- a/profile/edit/index.html
+++ b/profile/edit/index.html
@@ -41,7 +41,7 @@
 	</nav>
   
 	<main>
-		<div class="p-6 m-8 md:p-10 md:ml-28 md:mr-28 lg:ml-52 lg:mr-52 bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg">
+		<div class="max-w-[36rem] mx-4 sm:mx-6 md:mx-auto my-8 md:my-10 lg:my-12 px-4 sm:px-6 md:px-10 py-6 md:py-10 bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg">
 			<div class="border-b border-darkElements">
 				<h2 class="text-xl lg:text-2xl font-heading mb-2">Edit Profile</h2>
 			</div>
