--- a/profile/index.html
+++ b/profile/index.html
@@ -43,9 +43,9 @@
   </nav>
 
   <main class="pl-4 pr-4 lg:pl-20 lg:pr-20">  
-    <div class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg mt-10 mb-10 p-4 flex flex-col justify-center items-center gap-8">
-      <h2 class="font-heading text-xl lg:text-2xl text-center">Seems like you´re new here!</h2>
-      <p class="text-center">Why don´t you start off by creating your profile or first post?</p>
+    <div class="max-w-[36rem] mx-4 sm:mx-6 md:mx-auto my-8 md:my-10 lg:my-12 px-4 sm:px-6 md:px-10 py-6 md:py-10 bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg flex flex-col justify-center items-center gap-8">
+      <h2 class="font-heading text-xl lg:text-2xl text-center">Seems like you're new here!</h2>
+      <p class="text-center">Why don't you start off by updating your profile or create your first post?</p>
       <div class="flex flex-col md:flex-row gap-8 justify-center items-center mb-8">
         <div>
           <a href="/profile/edit/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">Edit Profile</a>
