fixing inconsistencies in code and styling

--- a/profile/user1/index.html
+++ b/profile/user1/index.html
@@ -82,7 +82,7 @@
         <div class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg p-4 mt-8">
           <h3 class="font-heading text-xl">My Travel Diary</h3>
           <img 
-            class="pt-4" 
+            class="pt-4 pb-2" 
             src="/assets/italy-1.jpg"
             alt="Colorful houses perched on a cliffside overlooking a sparkling ocean, creating a vibrant coastal scene.">
           <p><span class="font-bold">Posted on:</span> 10th of July</p>
@@ -93,7 +93,7 @@
         <div class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg p-4 mt-8">
           <h3 class="font-heading text-xl">My Travel Diary</h3>
           <img 
-            class="pt-4" 
+            class="pt-4 pb-2" 
             src="/assets/italy-3.jpg"
             alt="A serene street scene with a lamp post, framed by mountains and the ocean in the background.">
           <p><span class="font-bold">Posted on:</span> 8th of July</p>
@@ -104,10 +104,10 @@
         <div class="bg-lightBackground dark:bg-white border border-darkElements shadow-lg rounded-lg p-4 mt-8">
           <h3 class="font-heading text-xl">My Travel Diary</h3>
           <img 
-            class="pt-4" 
+            class="pt-4 pb-2" 
             src="/assets/italy-2.jpg"
             alt="A gondola glides gracefully through the serene canals of Venice, surrounded by historic buildings and vibrant reflections.">
-          <p><span class="font-bold">Posted on:</span> 5h of July</p>
+          <p><span class="font-bold">Posted on:</span> 5th of July</p>
           <p><span class="font-bold">Tag:</span> Europe</p>
           <p>Just started of our Italy trip in the incredible Venice. So excited for this adventure.</p>
         </div>
