--- a/profile/user2/index.html
+++ b/profile/user2/index.html
@@ -113,7 +113,7 @@
       </div>
 
       <div class="text-center mt-10">
-        <a href="/feed/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md pl-4 pr-4 pb-1 pt-1 text-xl hover:border-2 dark:hover:bg-darkText">Back To All Posts</a>
+        <a href="/feed/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">Back To All Posts</a>
       </div>
     </section>
   </main>
