--- a/feed/index.html
+++ b/feed/index.html
@@ -46,7 +46,7 @@
       <div class="mb-2">
         <h2 class="text-2xl">
           <div>
-            <a href="/post/new/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lgt">New Post</a>
+            <a href="/post/new/index.html" class="font-display bg-lightHeaderFooter border border-darkElements rounded-md shadow-md px-4 py-1 text-xl hover:brightness-95 hover:shadow-lg">New Post</a>
           </div>
         </h2>
       </div>
@@ -192,7 +192,7 @@
           class="pt-4 pb-2"
           src="/assets/italy-2.jpg" 
           alt="A gondola glides gracefully through the serene canals of Venice, surrounded by historic buildings and vibrant reflections.">
-        <p><span class="font-bold">Posted on:</span> 5h of July</p>
+        <p><span class="font-bold">Posted on:</span> 5th of July</p>
         <p><span class="font-bold">Tag:</span> Europe</p>
         <p>Just started of our Italy trip in the incredible Venice. So excited for this adventure.</p>
       </div>
